--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 .hero1{
     height:100%;
     width:100%;
-    background:url(../images/background11.png);
+    background:url(../images/background1.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
