--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,13 @@
-*{
-    margin:0;
-    padding:0;
-    font-family: sans-serif;
+body {
+    font-family: Tahoma;
+    background: #ff6c00;
+    margin: 0;
+    background-image:url(../images/background1.jpg);
 }
-.hero{
-    height:100%;
-    width:100%;
-    background:url(../images/background.jpg);
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-}
-.hero1{
-    height:100%;
-    width:100%;
-    background:url(../images/background1.jpg);
-    background-position: center;
-    background-size: cover;
-    position: absolute;
+h1 {
+    cursor: help;
+    margin: 0;
+    text-transform: uppercase;
+    padding-bottom: 5px;
+    border-bottom: 3px solid #4200a5;
 }
