--- a/style.css
+++ b/style.css
@@ -39,6 +39,150 @@ span:nth-child(4) {
 	animation-delay: 0.6s;
 }
 
+span:nth-child(5) {
+	animation-delay: 0.8s;
+}
+
+span:nth-child(6) {
+	animation-delay: 1.2s;
+}
+
+span:nth-child(7) {
+	animation-delay: 1.4s;
+}
+
+span:nth-child(8) {
+	animation-delay: 1.6s;
+}
+
+span:nth-child(9) {
+	animation-delay: 1.8s;
+}
+
+span:nth-child(10) {
+	animation-delay: 2s;
+}
+
+span:nth-child(11) {
+	animation-delay: 2.2s;
+}
+
+span:nth-child(12) {
+	animation-delay: 2.4s;
+}
+
+span:nth-child(13) {
+	animation-delay: 2.6s;
+}
+
+span:nth-child(14) {
+	animation-delay: 2.8s;
+}
+
+span:nth-child(15) {
+	animation-delay: 3s;
+}
+
+span:nth-child(16) {
+	animation-delay: 3.2s;
+}
+
+span:nth-child(17) {
+	animation-delay: 3.4s;
+}
+
+span:nth-child(18) {
+	animation-delay: 3.6s;
+}
+
+span:nth-child(19) {
+	animation-delay: 3.8s;
+}
+
+span:nth-child(20) {
+	animation-delay: 4s;
+}
+
+span:nth-child(21) {
+	animation-delay: 5s;
+}
+
+span:nth-child(22) {
+	animation-delay: 5.2s;
+}
+
+span:nth-child(23) {
+	animation-delay: 5.4s;
+}
+
+span:nth-child(24) {
+	animation-delay: 5.6s;
+}
+
+span:nth-child(25) {
+	animation-delay: 5.8s;
+}
+
+span:nth-child(26) {
+	animation-delay: 6s;
+}
+
+span:nth-child(27) {
+	animation-delay: 6.2s;
+}
+
+span:nth-child(28) {
+	animation-delay: 6.4s;
+}
+
+span:nth-child(29) {
+	animation-delay: 6.6s;
+}
+
+span:nth-child(30) {
+	animation-delay: 6.8s;
+}
+
+span:nth-child(31) {
+	animation-delay: 7s;
+}
+
+span:nth-child(32) {
+	animation-delay: 7.2s;
+}
+
+span:nth-child(33) {
+	animation-delay: 7.4s;
+}
+
+span:nth-child(34) {
+	animation-delay: 7.6s;
+}
+
+span:nth-child(35) {
+	animation-delay: 7.8s;
+}
+
+span:nth-child(36) {
+	animation-delay: 8s;
+}
+
+span:nth-child(37) {
+	animation-delay: 8.2s;
+}
+
+span:nth-child(38) {
+	animation-delay: 8.4s;
+}
+
+span:nth-child(39) {
+	animation-delay: 8.6s;
+}
+
+span:nth-child(40) {
+	animation-delay: 8.8s;
+}
+
 .knopki {
 	position: relative;
 	position: absolute;
