--- a/style.css
+++ b/style.css
@@ -1,191 +1,80 @@
 * {
-	padding: 0;
+	border: 0;
+	box-sizing: border-box;
 	margin: 0;
+	padding: 0;
 }
-
+:root {
+	--hue: 223;
+	--bg: hsl(var(--hue),90%,95%);
+	--fg: hsl(var(--hue),90%,5%);
+	--trans-dur: 0.3s;
+	font-size: calc(16px + (24 - 16) * (100vw - 320px) / (1280 - 320));
+}
 body {
-	background-color: darksalmon;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	background-color: var(--bg);
+	color: var(--fg);
+	font: 1em/1.5 sans-serif;
 	height: 100vh;
+	display: grid;
+	place-items: center;
+	transition: background-color var(--trans-dur);
+}
+main {
+	padding: 1.5em 0;
+}
+.ip {
+	width: 16em;
+	height: 8em;
+}
+.ip__track {
+	stroke: hsl(var(--hue),90%,90%);
+	transition: stroke var(--trans-dur);
+}
+.ip__worm1,
+.ip__worm2 {
+	animation: worm1 2s linear infinite;
+}
+.ip__worm2 {
+	animation-name: worm2;
 }
 
-span {
-	width: 30px;
-	height: 30px;
-	background-color: aqua;
-	margin: 0 5px;
-	border-radius: 50%;
-	animation: loader 0.8s;
-	animation-iteration-count: infinite;
+/* Dark theme */
+@media (prefers-color-scheme: dark) {
+	:root {
+		--bg: hsl(var(--hue),90%,5%);
+		--fg: hsl(var(--hue),90%,95%);
+	}
+	.ip__track {
+		stroke: hsl(var(--hue),90%,15%);
+	}
 }
 
-@keyframes loader {
-	0% { margin-bottom: 0px; }
-	50% { margin-bottom: 50px; }
-	100% { margin-bottom: 0px; }
+/* Animation */
+@keyframes worm1 {
+	from {
+		stroke-dashoffset: 0;
+	}
+	50% {
+		animation-timing-function: steps(1);
+		stroke-dashoffset: -358;
+	}
+	50.01% {
+		animation-timing-function: linear;
+		stroke-dashoffset: 358;
+	}
+	to {
+		stroke-dashoffset: 0;
+	}
 }
-
-span:nth-child(2) {
-	animation-delay: 0.2s;
-}
-
-span:nth-child(3) {
-	animation-delay: 0.4s;
-}
-
-span:nth-child(4) {
-	animation-delay: 0.6s;
-}
-
-span:nth-child(5) {
-	animation-delay: 0.8s;
-}
-
-span:nth-child(6) {
-	animation-delay: 1.2s;
-}
-
-span:nth-child(7) {
-	animation-delay: 1.4s;
-}
-
-span:nth-child(8) {
-	animation-delay: 1.6s;
-}
-
-span:nth-child(9) {
-	animation-delay: 1.8s;
-}
-
-span:nth-child(10) {
-	animation-delay: 2s;
-}
-
-span:nth-child(11) {
-	animation-delay: 2.2s;
-}
-
-span:nth-child(12) {
-	animation-delay: 2.4s;
-}
-
-span:nth-child(13) {
-	animation-delay: 2.6s;
-}
-
-span:nth-child(14) {
-	animation-delay: 2.8s;
-}
-
-span:nth-child(15) {
-	animation-delay: 3s;
-}
-
-span:nth-child(16) {
-	animation-delay: 3.2s;
-}
-
-span:nth-child(17) {
-	animation-delay: 3.4s;
-}
-
-span:nth-child(18) {
-	animation-delay: 3.6s;
-}
-
-span:nth-child(19) {
-	animation-delay: 3.8s;
-}
-
-span:nth-child(20) {
-	animation-delay: 4s;
-}
-
-span:nth-child(21) {
-	animation-delay: 5s;
-}
-
-span:nth-child(22) {
-	animation-delay: 5.2s;
-}
-
-span:nth-child(23) {
-	animation-delay: 5.4s;
-}
-
-span:nth-child(24) {
-	animation-delay: 5.6s;
-}
-
-span:nth-child(25) {
-	animation-delay: 5.8s;
-}
-
-span:nth-child(26) {
-	animation-delay: 6s;
-}
-
-span:nth-child(27) {
-	animation-delay: 6.2s;
-}
-
-span:nth-child(28) {
-	animation-delay: 6.4s;
-}
-
-span:nth-child(29) {
-	animation-delay: 6.6s;
-}
-
-span:nth-child(30) {
-	animation-delay: 6.8s;
-}
-
-span:nth-child(31) {
-	animation-delay: 7s;
-}
-
-span:nth-child(32) {
-	animation-delay: 7.2s;
-}
-
-span:nth-child(33) {
-	animation-delay: 7.4s;
-}
-
-span:nth-child(34) {
-	animation-delay: 7.6s;
-}
-
-span:nth-child(35) {
-	animation-delay: 7.8s;
-}
-
-span:nth-child(36) {
-	animation-delay: 8s;
-}
-
-span:nth-child(37) {
-	animation-delay: 8.2s;
-}
-
-span:nth-child(38) {
-	animation-delay: 8.4s;
-}
-
-span:nth-child(39) {
-	animation-delay: 8.6s;
-}
-
-span:nth-child(40) {
-	animation-delay: 8.8s;
-}
-
-.knopki {
-	position: relative;
-	position: absolute;
-	top: 10px;
-	left: 10px;
+@keyframes worm2 {
+	from {
+		stroke-dashoffset: 358;
+	}
+	50% {
+		stroke-dashoffset: 0;
+	}
+	to {
+		stroke-dashoffset: -358;
+	}
 }
