--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 10px 8px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
+    border-radius: 5px;
     width: 200px;
     margin: 10px;
     padding: 10px;
 }
 
-/* Add rounded corners to the top left and the top right corner of the image */
 img {
-    border-radius: 5px 5px 0 0;
+    border-radius: 30px 30px 30px 30px;
 }
 
 .cards {
     display: flex;
+    text-align: center;
 }
