--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+body{
+    background-image: url("./images/background3.jpg");
+}
+
 .card {
     box-shadow: 10px 8px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border-radius: 5px;
+    border-radius: 50px;
     width: 200px;
     margin: 10px;
     padding: 10px;
+    background-color: rgba(0, 134, 175, 0.603);
 }
 
 img {
@@ -14,8 +19,4 @@ img {
 .cards {
     display: flex;
     text-align: center;
-}
-
-.background {
-    background-image: url("./images/background.jpg");
 }
