--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     background-color: rgba(0, 134, 175, 0);
 }
 
-img {
+.card img {
     border-radius: 30px 30px 30px 30px;
 }
 
@@ -22,6 +22,13 @@ img {
     text-align: center;
 }
 
+.icon {
+    text-align: center;
+}
+
+.icon img {
+    width: 20%;
+}
 
 .cards h4 {
     text-shadow: 0px 0px 5px #7700ff;
