--- a/style1.css
+++ b/style1.css
@@ -1,95 +1,101 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-body { background-color: #b4deac; margin: 0; font-family: 'Roboto Condensed', sans-serif;}
-main {
-  width: 100vw;
-  height: 100vh;
-  display: table-cell;
-  vertical-align: middle;
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: consolas;
+}
+
+.container {
+  width: 1000px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container .card {
+  position: relative;
+  cursor: pointer;
   text-align: center;
 }
-.card{
-  width: 400px;
-  background-color: white;
-  border-radius: 10px;
-  -webkit-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.14);
-  -moz-box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.14);
-  box-shadow: 10px 10px 23px 0px rgba(0,0,0,0.14);
-  margin: auto;
-  text-align: left;
-  cursor: pointer;
+
+.container .card .face {
+  width: 300px;
+  height: 200px;
+  transition: 0.5s;
+}
+
+.container .card .face.face1 {
   position: relative;
-  height: 360px;
-  display: inline-block;
-  transform: scale(.9);
-  transition: all .3s;
+  background: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
 }
 
-.card:hover{
-  transform: scale(.95);
+.container .card:hover .face.face1 {
+  background: #ff0057;
+  transform: translateY(0);
 }
 
-.card-top {
-  width: 100%;
-  height: 270px;
-  background-color: #f1f1f1;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+.container .card .face.face1 .content {
+  opacity: 0.2;
+  transition: 0.5s;
 }
-.card-top > img {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  width: 100%;
-  height: 100%;
+
+.container .card:hover .face.face1 .content {
+  opacity: 1;
 }
-.card-mid {
+
+.container .card .face.face1 .content img {
+  max-width: 100px;
+}
+
+.container .card .face.face1 .content h3 {
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.container .card .face.face2 {
+  position: relative;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 50px;
-  background-color: white;
-  border-bottom-left-radius: 10px;
-  overflow:hidden;
-  border-bottom-right-radius: 10px;
-  transition: all .3s;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+  transform: translateY(-100px);
 }
-.card-mid h4{
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-.card-mid label{
-  margin: 0;
-  display: block;
-  width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  color: grey;
-}
-.card-image{
-  transition: all .3s;
-}
-.card:hover .card-image {
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
-}
-.card-desc {
-  transition: all .3s .2s;
-  border-left: 0px solid #b4deac;
-}
-.card:hover .card-desc {
-  border-left: 2px solid #b4deac;
-  padding-left: 8px;
-}
-.card-blur-zone {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  height: 15px;
-  background-color: rgba(255, 255, 255, .8);
 
+.container .card:hover .face.face2 {
+  transform: translateY(0);
+}
+
+.container .card .face.face2 .content p {
+  margin: 0;
+  padding: 0;
+}
+
+.container .card .face.face2 .content a {
+  margin: 15px 0 0;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 900;
+  color: #333;
+  padding: 5px;
+  border: 1px solid #333;
+}
+
+.container .card .face.face2 .content a:hover {
+  background: #333;
+  color: #fff;
 }
