--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     margin: 40px 0 5px;
     padding: 25px 0 5px;
     text-align: center;
-    background: white;
+    background: rgba(255, 255, 255, 0);
 }
 
 .menu-main li {
