--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+
 body {
-    background-color: rgb(255, 255, 255);
-    background-size: 100%;
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    background-size: cover;
+    height: 100vh;
+    background-repeat: no-repeat;
 }
+
 
 /* Новигационное меню */
 
@@ -118,10 +124,16 @@ body {
 
 .icon {
     text-align: center;
+    /* margin-top: 10%; */
 }
 
 .icon img {
     width: 20%;
+}
+
+.privtext {
+    text-align: center;
+    font-family: 'Comfortaa', cursive;
 }
 
 .cards h4 {
