--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,9 @@
 body {
-  background: #ffffff;
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  background-size: cover;
+  height: 100vh;
+  background-repeat: no-repeat;
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -7,100 +11,6 @@ body {
   align-items: center;
   font-family: consolas;
 }
-
-/* Новигационное меню */
-
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-
-.menu-main {
-  list-style: none;
-  margin: 40px 0 5px;
-  padding: 25px 0 5px;
-  text-align: center;
-  background: rgba(255, 255, 255, 0);
-}
-
-.menu-main li {
-  display: inline-block;
-}
-
-.menu-main li:after {
-  content: "|";
-  color: #606060;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.menu-main li:last-child:after {
-  content: none;
-}
-
-.menu-main a {
-  text-decoration: none;
-  font-family: 'Pacifico', cursive;
-  letter-spacing: 2px;
-  position: relative;
-  padding-bottom: 20px;
-  margin: 0 34px 0 30px;
-  font-size: 17px;
-  text-transform: uppercase;
-  display: inline-block;
-  transition: color .2s;
-}
-
-.menu-main a,
-.menu-main a:visited {
-  color: #9d999d;
-}
-
-.menu-main a.current,
-.menu-main a:hover {
-  color: #feb386;
-}
-
-.menu-main a:before,
-.menu-main a:after {
-  content: "";
-  position: absolute;
-  height: 4px;
-  top: auto;
-  right: 50%;
-  bottom: -5px;
-  left: 50%;
-  background: #feb386;
-  transition: .8s;
-}
-
-.menu-main a:hover:before,
-.menu-main .current:before {
-  left: 0;
-}
-
-.menu-main a:hover:after,
-.menu-main .current:after {
-  right: 0;
-}
-
-@media (max-width: 550px) {
-  .menu-main {
-    padding-top: 0;
-  }
-
-  .menu-main li {
-    display: block;
-  }
-
-  .menu-main li:after {
-    content: none;
-  }
-
-  .menu-main a {
-    padding: 25px 0 20px;
-    margin: 0 30px;
-  }
-}
-
-/* Конец новигационного меню */
 
 .container {
   width: 1000px;
@@ -136,7 +46,7 @@ body {
 }
 
 .container .card:hover .face.face1 {
-  background: #ff0057;
+  background: #008cff;
   transform: translateY(0);
 }
 
