--- a/NavMenu.css
+++ b/NavMenu.css
@@ -14,7 +14,7 @@
 
 .menu-main li:after {
     content: "|";
-    color: #000000;
+    color: #ffffff;
     display: inline-block;
     vertical-align: top;
 }
@@ -34,16 +34,17 @@
     text-transform: uppercase;
     display: inline-block;
     transition: color .2s;
+    text-shadow: 4px 4px 4px black;
 }
 
 .menu-main a,
 .menu-main a:visited {
-    color: #000000;
+    color: #ffffff;
 }
 
 .menu-main a.current,
 .menu-main a:hover {
-    color: #feb386;
+    color: #03e9f4;
 }
 
 .menu-main a:before,
@@ -55,7 +56,7 @@
     right: 50%;
     bottom: -5px;
     left: 50%;
-    background: #feb386;
+    background: #03e9f4;
     transition: .8s;
 }
 
