--- a/style1.css
+++ b/style1.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #4158D0;
-  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-  background-size: cover;
-  height: 100vh;
+  background-color: #ffffff;
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url(./images/NeZadniyFon.jpg);
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -13,26 +13,27 @@ body {
 }
 
 .container {
-  width: 1000px;
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10%;
-
 }
 
 .container .card {
   position: relative;
   cursor: pointer;
   text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .container .card .face {
   width: 300px;
   height: 200px;
   transition: 0.5s;
+  border-radius: 25px 25px 25px 25px;
 }
 
 .container .card .face.face1 {
@@ -105,4 +106,8 @@ body {
 .container .card .face.face2 .content a:hover {
   background: #333;
   color: #fff;
+}
+
+.container .card .face.face1 .content img {
+  border-radius: 15px 15px 15px 15px;
 }
