--- a/style.css
+++ b/style.css
@@ -38,9 +38,9 @@ body {
 
 .privtext h2 {
     font-size: 55px;
-    color: #eeeeee;
+    color: #ffffff;
     /* text-shadow: 4px 4px 4px black; */
-    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.7);
+    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.753);
 }
 
 .button {
